--- a/src/views/signup.fxml
+++ b/src/views/signup.fxml
@@ -1,10 +1,51 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Signup">
    <children>
-      <Button layoutX="613.0" layoutY="348.0" mnemonicParsing="false" onAction="#signup" text="SignUp" />
+      <Button layoutX="281.0" layoutY="581.0" mnemonicParsing="false" onAction="#signup" prefHeight="47.0" prefWidth="112.0" text="SignUp">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <Label layoutX="172.0" layoutY="26.0" prefHeight="53.0" prefWidth="258.0" text="Create Account">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Label layoutX="99.0" layoutY="145.0" prefHeight="34.0" prefWidth="73.0" text="Name:" />
+      <TextField fx:id="name_field" layoutX="227.0" layoutY="154.0" prefHeight="25.0" prefWidth="219.0" />
+      <Label layoutX="99.0" layoutY="216.0" prefHeight="34.0" prefWidth="73.0" text="Username:" />
+      <TextField fx:id="username_field" layoutX="227.0" layoutY="221.0" prefHeight="25.0" prefWidth="219.0" />
+      <Label layoutX="99.0" layoutY="298.0" prefHeight="34.0" prefWidth="73.0" text="Email:" />
+      <TextField fx:id="email_field" layoutX="227.0" layoutY="302.0" prefHeight="25.0" prefWidth="219.0" />
+      <Label layoutX="99.0" layoutY="371.0" prefHeight="34.0" prefWidth="73.0" text="Password:" />
+      <Label layoutX="99.0" layoutY="452.0" prefHeight="34.0" prefWidth="106.0" text="Confirm Password:" />
+      <PasswordField fx:id="pass_field" layoutX="227.0" layoutY="376.0" prefHeight="25.0" prefWidth="219.0" />
+      <PasswordField fx:id="confpass_field" layoutX="227.0" layoutY="457.0" prefHeight="25.0" prefWidth="219.0" />
+      <Label fx:id="msg_label" alignment="CENTER" layoutX="618.0" layoutY="674.0" />
+      <Label alignment="CENTER" layoutX="885.0" layoutY="26.0" prefHeight="53.0" prefWidth="258.0" text="Login">
+         <font>
+            <Font size="36.0" />
+         </font>
+      </Label>
+      <Label layoutX="796.0" layoutY="217.0" prefHeight="34.0" prefWidth="73.0" text="Username:" />
+      <TextField fx:id="login_username_field" layoutX="924.0" layoutY="222.0" prefHeight="25.0" prefWidth="219.0" />
+      <Label layoutX="796.0" layoutY="355.0" prefHeight="34.0" prefWidth="73.0" text="Password:" />
+      <PasswordField fx:id="login_pass_field" layoutX="924.0" layoutY="359.0" prefHeight="25.0" prefWidth="219.0" />
+      <Separator layoutX="632.0" layoutY="66.0" orientation="VERTICAL" prefHeight="579.0" prefWidth="17.0" />
+      <Separator layoutX="626.0" layoutY="79.0" orientation="VERTICAL" prefHeight="549.0" prefWidth="6.0" />
+      <Separator layoutX="649.0" layoutY="79.0" orientation="VERTICAL" prefHeight="549.0" prefWidth="6.0" />
+      <Button layoutX="958.0" layoutY="581.0" mnemonicParsing="false" onAction="#login" prefHeight="47.0" prefWidth="112.0" text="Login">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
 </Pane>
