--- a/src/views/signup.fxml
+++ b/src/views/signup.fxml
@@ -1,51 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Signup">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" styleClass="root" stylesheets="@../style/theme.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Signup">
    <children>
-      <Button layoutX="281.0" layoutY="581.0" mnemonicParsing="false" onAction="#signup" prefHeight="47.0" prefWidth="112.0" text="SignUp">
+      <Label fx:id="msg_label" alignment="CENTER" layoutX="565.0" layoutY="660.0">
          <font>
-            <Font size="18.0" />
-         </font></Button>
-      <Label layoutX="172.0" layoutY="26.0" prefHeight="53.0" prefWidth="258.0" text="Create Account">
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
+      <Label alignment="CENTER" layoutX="720.0" layoutY="115.0" text="Digital Content Organizer">
          <font>
-            <Font size="36.0" />
+            <Font name="System Bold" size="34.0" />
          </font>
       </Label>
-      <Label layoutX="99.0" layoutY="145.0" prefHeight="34.0" prefWidth="73.0" text="Name:" />
-      <TextField fx:id="name_field" layoutX="227.0" layoutY="154.0" prefHeight="25.0" prefWidth="219.0" />
-      <Label layoutX="99.0" layoutY="216.0" prefHeight="34.0" prefWidth="73.0" text="Username:" />
-      <TextField fx:id="username_field" layoutX="227.0" layoutY="221.0" prefHeight="25.0" prefWidth="219.0" />
-      <Label layoutX="99.0" layoutY="298.0" prefHeight="34.0" prefWidth="73.0" text="Email:" />
-      <TextField fx:id="email_field" layoutX="227.0" layoutY="302.0" prefHeight="25.0" prefWidth="219.0" />
-      <Label layoutX="99.0" layoutY="371.0" prefHeight="34.0" prefWidth="73.0" text="Password:" />
-      <Label layoutX="99.0" layoutY="452.0" prefHeight="34.0" prefWidth="106.0" text="Confirm Password:" />
-      <PasswordField fx:id="pass_field" layoutX="227.0" layoutY="376.0" prefHeight="25.0" prefWidth="219.0" />
-      <PasswordField fx:id="confpass_field" layoutX="227.0" layoutY="457.0" prefHeight="25.0" prefWidth="219.0" />
-      <Label fx:id="msg_label" alignment="CENTER" layoutX="618.0" layoutY="674.0" />
-      <Label alignment="CENTER" layoutX="885.0" layoutY="26.0" prefHeight="53.0" prefWidth="258.0" text="Login">
+      <TextField fx:id="login_username_field" focusTraversable="false" layoutX="750.0" layoutY="260.0" prefHeight="50.0" prefWidth="350.0" promptText="Username" styleClass="textfield">
          <font>
-            <Font size="36.0" />
-         </font>
-      </Label>
-      <Label layoutX="796.0" layoutY="217.0" prefHeight="34.0" prefWidth="73.0" text="Username:" />
-      <TextField fx:id="login_username_field" layoutX="924.0" layoutY="222.0" prefHeight="25.0" prefWidth="219.0" />
-      <Label layoutX="796.0" layoutY="355.0" prefHeight="34.0" prefWidth="73.0" text="Password:" />
-      <PasswordField fx:id="login_pass_field" layoutX="924.0" layoutY="359.0" prefHeight="25.0" prefWidth="219.0" />
-      <Separator layoutX="632.0" layoutY="66.0" orientation="VERTICAL" prefHeight="579.0" prefWidth="17.0" />
-      <Separator layoutX="626.0" layoutY="79.0" orientation="VERTICAL" prefHeight="549.0" prefWidth="6.0" />
-      <Separator layoutX="649.0" layoutY="79.0" orientation="VERTICAL" prefHeight="549.0" prefWidth="6.0" />
-      <Button layoutX="958.0" layoutY="581.0" mnemonicParsing="false" onAction="#login" prefHeight="47.0" prefWidth="112.0" text="Login">
+            <Font name="System Bold" size="18.0" />
+         </font></TextField>
+      <PasswordField fx:id="login_pass_field" focusTraversable="false" layoutX="750.0" layoutY="350.0" prefHeight="50.0" prefWidth="350.0" promptText="Password" styleClass="textfield">
          <font>
-            <Font size="18.0" />
+            <Font name="System Bold" size="18.0" />
+         </font></PasswordField>
+      <Button fx:id="login_btn" focusTraversable="false" layoutX="850.0" layoutY="520.0" mnemonicParsing="false" onAction="#login" prefHeight="55.0" prefWidth="150.0" styleClass="primary-button" text="Login">
+         <font>
+            <Font name="System Bold" size="20.0" />
          </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
       </Button>
+      <Pane prefHeight="720.0" prefWidth="550.0" styleClass="secondary-color">
+         <children>
+            <TextField fx:id="name_field" focusTraversable="false" layoutX="150.0" layoutY="160.0" prefHeight="35.0" prefWidth="250.0" promptText="Name" styleClass="textfield">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="username_field" focusTraversable="false" layoutX="150.0" layoutY="240.0" prefHeight="35.0" prefWidth="250.0" promptText="Username" styleClass="textfield">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </TextField>
+            <TextField fx:id="email_field" focusTraversable="false" layoutX="150.0" layoutY="320.0" prefHeight="35.0" prefWidth="250.0" promptText="Email" styleClass="textfield">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </TextField>
+            <PasswordField fx:id="pass_field" focusTraversable="false" layoutX="150.0" layoutY="400.0" prefHeight="35.0" prefWidth="250.0" promptText="Password" styleClass="textfield">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </PasswordField>
+            <PasswordField fx:id="confpass_field" focusTraversable="false" layoutX="150.0" layoutY="480.0" prefHeight="35.0" prefWidth="250.0" promptText="Confirm Password" styleClass="textfield">
+               <font>
+                  <Font name="System Bold" size="14.0" />
+               </font>
+            </PasswordField>
+            <Label alignment="CENTER" layoutX="165.0" layoutY="59.0" text="Create Account" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="30.0" />
+               </font>
+            </Label>
+            <Button fx:id="signup_btn" focusTraversable="false" layoutX="200.0" layoutY="580.0" mnemonicParsing="false" onAction="#signup" prefHeight="55.0" prefWidth="150.0" styleClass="secondary-button" text="SignUp">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+            </Button>
+         </children>
+      </Pane>
+      <Label alignment="CENTER" focusTraversable="false" layoutX="975.0" layoutY="410.0" styleClass="hyperlink1" text="Forgot Password?">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Label>
    </children>
 </Pane>
