--- a/src/views/signup.fxml
+++ b/src/views/signup.fxml
@@ -16,7 +16,7 @@
          </font></Label>
       <Label alignment="CENTER" layoutX="720.0" layoutY="115.0" text="Digital Content Organizer">
          <font>
-            <Font name="System Bold" size="34.0" />
+            <Font name="System Bold Italic" size="34.0" />
          </font>
       </Label>
       <TextField fx:id="login_username_field" focusTraversable="false" layoutX="750.0" layoutY="260.0" prefHeight="50.0" prefWidth="350.0" promptText="Username" styleClass="textfield">
@@ -64,7 +64,7 @@
             </PasswordField>
             <Label alignment="CENTER" layoutX="165.0" layoutY="59.0" text="Create Account" textFill="WHITE">
                <font>
-                  <Font name="System Bold" size="30.0" />
+                  <Font name="System Bold Italic" size="30.0" />
                </font>
             </Label>
             <Button fx:id="signup_btn" focusTraversable="false" layoutX="200.0" layoutY="580.0" mnemonicParsing="false" onAction="#signup" prefHeight="55.0" prefWidth="150.0" styleClass="secondary-button" text="SignUp">
