--- a/src/views/profile.fxml
+++ b/src/views/profile.fxml
@@ -7,51 +7,103 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Profile">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1040.0" styleClass="root" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Profile">
    <children>
-      <Button layoutX="783.0" layoutY="594.0" mnemonicParsing="false" onAction="#logout" prefHeight="47.0" prefWidth="112.0" text="Logout">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="465.0" layoutY="50.0" text="Profile" textAlignment="CENTER">
          <font>
-            <Font size="18.0" />
-         </font>
-      </Button>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="566.0" layoutY="71.0" prefHeight="53.0" prefWidth="258.0" text="Profile" textAlignment="CENTER">
-         <font>
-            <Font size="36.0" />
+            <Font name="System Bold" size="34.0" />
          </font>
       </Label>
-      <Label layoutX="475.0" layoutY="150.0" prefHeight="25.0" prefWidth="75.0" text="Name:" />
-      <TextField fx:id="name_field" editable="false" layoutX="600.0" layoutY="140.0" prefHeight="25.0" prefWidth="220.0" />
+      <Label layoutX="245.0" layoutY="125.0" text="Name:">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font></Label>
+      <TextField fx:id="name_field" editable="false" layoutX="395.0" layoutY="120.0" prefHeight="35.0" prefWidth="250.0" styleClass="textfield">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></TextField>
       
-      <Label layoutX="475.0" layoutY="200.0" prefHeight="25.0" prefWidth="75.0" text="Username:" />
-      <TextField fx:id="username_field" editable="false" layoutX="600.0" layoutY="200.0" prefHeight="25.0" prefWidth="220.0" />
+      <Label layoutX="245.0" layoutY="185.0" text="Username:">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font></Label>
+      <TextField fx:id="username_field" editable="false" layoutX="395.0" layoutY="180.0" prefHeight="35.0" prefWidth="250.0" styleClass="textfield">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></TextField>
       
-      <Label layoutX="475.0" layoutY="250.0" prefHeight="25.0" prefWidth="75.0" text="Email:" />
-      <TextField fx:id="email_field" editable="false" layoutX="600.0" layoutY="250.0" prefHeight="25.0" prefWidth="220.0" />
+      <Label layoutX="245.0" layoutY="245.0" text="Email:">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font></Label>
+      <TextField fx:id="email_field" editable="false" layoutX="395.0" layoutY="240.0" prefHeight="35.0" prefWidth="250.0" styleClass="textfield">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></TextField>
       
-      <Label layoutX="475.0" layoutY="300.0" prefHeight="25.0" prefWidth="75.0" text="Role:" />
-      <TextField fx:id="role_field" editable="false" layoutX="600.0" layoutY="300.0" prefHeight="25.0" prefWidth="220.0" />
+      <Label layoutX="245.0" layoutY="305.0" text="Role:">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font></Label>
+      <TextField fx:id="role_field" editable="false" layoutX="395.0" layoutY="300.0" prefHeight="35.0" prefWidth="250.0" styleClass="textfield">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></TextField>
       
-      <Label layoutX="475.0" layoutY="350.0" prefHeight="25.0" prefWidth="75.0" text="Status:" />
-      <TextField fx:id="status_field" editable="false" layoutX="600.0" layoutY="350.0" prefHeight="25.0" prefWidth="220.0" />
+      <Label layoutX="245.0" layoutY="365.0" text="Status:">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font></Label>
+      <TextField fx:id="status_field" editable="false" layoutX="395.0" layoutY="360.0" prefHeight="35.0" prefWidth="250.0" styleClass="textfield">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></TextField>
 
-      <Label layoutX="475.0" layoutY="400.0" prefHeight="25.0" prefWidth="75.0" text="Created:" />
-      <Label fx:id="creation_datetime_label" layoutX="600.0" layoutY="400.0" prefHeight="25.0" prefWidth="220.0" />
+      <Label layoutX="245.0" layoutY="425.0" text="Created:">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font></Label>
+      <Label fx:id="creation_datetime_label" layoutX="395.0" layoutY="420.0" prefHeight="35.0" prefWidth="250.0">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
 
-      <Label layoutX="475.0" layoutY="450.0" prefHeight="25.0" prefWidth="75.0" text="Last Modified:" />
-      <Label fx:id="modification_datetime_label" layoutX="600.0" layoutY="450.0" prefHeight="25.0" prefWidth="220.0" />
+      <Label layoutX="245.0" layoutY="485.0" text="Last Modified:">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font></Label>
+      <Label fx:id="modification_datetime_label" layoutX="395.0" layoutY="480.0" prefHeight="35.0" prefWidth="250.0">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
 
-      <Label fx:id="password_label" layoutX="475.0" layoutY="500.0" prefHeight="25.0" prefWidth="75.0" text="Password:" visible="false" />
-      <PasswordField fx:id="password_field" editable="false" layoutX="600.0" layoutY="500.0" prefHeight="25.0" prefWidth="220.0" visible="false" />
+      <Label fx:id="password_label" layoutX="245.0" layoutY="545.0" text="Password:" visible="false">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font></Label>
+      <PasswordField fx:id="password_field" editable="false" layoutX="395.0" layoutY="540.0" prefHeight="35.0" prefWidth="250.0" styleClass="textfield" visible="false">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></PasswordField>
 
-      <Label fx:id="confirm_password_label" layoutX="475.0" layoutY="550.0" prefHeight="25.0" prefWidth="100.0" text="Confirm Password:" visible="false" />
-      <PasswordField fx:id="confirm_password_field" editable="false" layoutX="600.0" layoutY="550.0" prefHeight="25.0" prefWidth="220.0" visible="false" />
+      <Label fx:id="confirm_password_label" layoutX="245.0" layoutY="605.0" text="Confirm Password:" visible="false">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font></Label>
+      <PasswordField fx:id="confirm_password_field" editable="false" layoutX="395.0" layoutY="600.0" prefHeight="35.0" prefWidth="250.0" styleClass="textfield" visible="false">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></PasswordField>
 
-      <Button fx:id="btn" layoutX="550.0" layoutY="594.0" mnemonicParsing="false" onAction="#buttonOnclick" prefHeight="47.0" prefWidth="112.0" text="Edit">
+      <Button fx:id="btn" layoutX="792.0" layoutY="305.0" mnemonicParsing="false" onAction="#buttonOnclick" prefHeight="50.0" prefWidth="120.0" styleClass="primary-button" text="Edit">
         <font>
             <Font size="18.0" />
         </font>
        </Button>
       
-      <Label fx:id="msg_label" alignment="CENTER" contentDisplay="CENTER" layoutX="690.0" layoutY="669.0" textAlignment="CENTER" />
+      <Label fx:id="msg_label" alignment="CENTER" contentDisplay="CENTER" layoutX="14.0" layoutY="12.0" textAlignment="CENTER">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></Label>
    </children>
 </Pane>
