--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -19,7 +19,7 @@
 }
 
 .primary-button:hover{
-    -fx-background-color: #408ec6;
+    -fx-background-color: #7a2048;
     -fx-effect: dropshadow( gaussian , rgba(0,0,0,0.7) , 10,0,0,1 );
 }
 
@@ -54,4 +54,57 @@
 .menu-button:hover{
     -fx-background-color: #7a2048;
     -fx-text-fill: white;
+}
+
+.choice-box .context-menu{
+    -fx-background-color: #add8e6;
+}
+
+.choice-box .menu-item:focused{
+    -fx-background-color: #1e2761;
+}
+
+.choice-box .menu-item > .label{
+    -fx-text-fill: black;
+    -fx-font-size: 14px;
+}
+
+.choice-box .menu-item:focused > .label{
+    -fx-text-fill: white;
+    -fx-font-size: 14px;
+}
+
+.choice-box{
+    -fx-background-color: #1e2761;
+    -fx-mark-color: white;
+    -fx-background-radius: 20;
+}
+
+.choice-box > .label{
+    -fx-text-fill: white;
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
+}
+
+.table-view{
+    -fx-background-color: white;
+    -fx-background-radius: 20;
+    -fx-font-size: 16px;
+}
+
+.table-view .column-header-background{
+    -fx-background-color: #1e2761;
+    -fx-background-radius: 20;
+}
+
+.table-view .column-header, .table-view.filler{
+    -fx-size: 40;
+    -fx-background-color: transparent;
+    -fx-border-color: white;
+    -fx-border-radius: 20
+}
+
+.table-view .column-header .label{
+    -fx-text-fill: white;
+    -fx-font-size: 15px;
 }
