--- a/src/views/create_content.fxml
+++ b/src/views/create_content.fxml
@@ -2,21 +2,53 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CreateContent">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1040.0" styleClass="root" stylesheets="@../styles/theme.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CreateContent">
    <children>
-      <TextField fx:id="title_field" layoutX="74.0" layoutY="111.0" promptText="Title" />
-      <TextField fx:id="url_field" layoutX="446.0" layoutY="111.0" promptText="URL" />
-      <TextField fx:id="alternative_url_field" layoutX="817.0" layoutY="111.0" promptText="Alternative URL" />
-      <ChoiceBox fx:id="type_choice_box" layoutX="73.0" layoutY="163.0" prefWidth="150.0" />
-      <ChoiceBox fx:id="privacy_choice_box" layoutX="445.0" layoutY="163.0" prefWidth="150.0" />
-      <TextArea fx:id="details_area" layoutX="74.0" layoutY="235.0" prefHeight="288.0" prefWidth="892.0" promptText="Details" />
-      <Button fx:id="cancel_btn" layoutX="236.0" layoutY="565.0" mnemonicParsing="false" text="Cancel" />
-      <Button fx:id="reset_btn" layoutX="494.0" layoutY="565.0" mnemonicParsing="false" text="Reset" />
-      <Button fx:id="create_btn" layoutX="718.0" layoutY="565.0" mnemonicParsing="false" onAction="#createContent" text="Create" />
-      <TextField fx:id="tag_field" layoutX="817.0" layoutY="163.0" promptText="Tag" />
+      <TextField fx:id="title_field" layoutX="395.0" layoutY="80.0" prefHeight="35.0" prefWidth="250.0" promptText="Title" styleClass="textfield">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></TextField>
+      <TextField fx:id="url_field" layoutX="70.0" layoutY="150.0" prefHeight="35.0" prefWidth="350.0" promptText="URL" styleClass="textfield">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></TextField>
+      <TextField fx:id="alternative_url_field" layoutX="620.0" layoutY="150.0" prefHeight="35.0" prefWidth="350.0" promptText="Alternative URL (Optional)" styleClass="textfield">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></TextField>
+      <ChoiceBox fx:id="type_choice_box" layoutX="140.0" layoutY="290.0" prefWidth="150.0" />
+      <ChoiceBox fx:id="privacy_choice_box" layoutX="140.0" layoutY="360.0" prefWidth="150.0" />
+      <TextArea fx:id="details_area" layoutX="70.0" layoutY="440.0" prefHeight="100.0" prefWidth="900.0" promptText="Details (Optional)">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></TextArea>
+      <Button fx:id="reset_btn" layoutX="956.0" layoutY="14.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="70.0" styleClass="primary-button" text="Reset">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button fx:id="create_btn" layoutX="460.0" layoutY="580.0" mnemonicParsing="false" onAction="#createContent" prefHeight="50.0" prefWidth="120.0" styleClass="primary-button" text="Create">
+         <font>
+            <Font size="18.0" />
+         </font></Button>
+      <TextField fx:id="tag_field" layoutX="70.0" layoutY="220.0" prefHeight="35.0" prefWidth="250.0" promptText="Tag (Optional)" styleClass="textfield">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font></TextField>
+      <Label layoutX="70.0" layoutY="293.0" text="Type:">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Label>
+      <Label layoutX="70.0" layoutY="363.0" text="Privacy:">
+         <font>
+            <Font name="System Bold" size="16.0" />
+         </font>
+      </Label>
    </children>
 </Pane>
