--- a/src/views/create_shelf.fxml
+++ b/src/views/create_shelf.fxml
@@ -8,22 +8,22 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1040.0" styleClass="root" stylesheets="@../styles/theme.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CreateShelf">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1040.0" styleClass="root" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CreateShelf">
    <children>
       <TextField fx:id="title_field" layoutX="395.0" layoutY="80.0" prefHeight="35.0" prefWidth="250.0" promptText="Title" styleClass="textfield">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></TextField>
       <ChoiceBox fx:id="privacy_choice_box" layoutX="140.0" layoutY="360.0" prefWidth="150.0" />
-      <TextArea fx:id="details_area" layoutX="70.0" layoutY="440.0" prefHeight="100.0" prefWidth="900.0" promptText="Details (Optional)">
+      <TextArea fx:id="details_area" layoutX="70.0" layoutY="430.0" prefHeight="100.0" prefWidth="900.0" promptText="Details (Optional)">
          <font>
             <Font name="System Bold" size="14.0" />
          </font></TextArea>
-      <Button fx:id="reset_btn" layoutX="956.0" layoutY="14.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="70.0" styleClass="primary-button" text="Reset">
+      <Button fx:id="reset_btn" layoutX="956.0" layoutY="14.0" mnemonicParsing="false" onAction="#reset" prefHeight="30.0" prefWidth="70.0" styleClass="primary-button" text="Reset">
          <font>
             <Font size="14.0" />
          </font></Button>
-      <Button fx:id="create_btn" layoutX="460.0" layoutY="580.0" mnemonicParsing="false" onAction="#createShelf" prefHeight="50.0" prefWidth="120.0" styleClass="primary-button" text="Create">
+      <Button fx:id="create_btn" layoutX="460.0" layoutY="570.0" mnemonicParsing="false" onAction="#createShelf" prefHeight="50.0" prefWidth="120.0" styleClass="primary-button" text="Create">
          <font>
             <Font size="18.0" />
          </font></Button>
@@ -34,6 +34,21 @@
       <Label layoutX="70.0" layoutY="363.0" text="Privacy:">
          <font>
             <Font name="System Bold" size="16.0" />
+         </font>
+      </Label>
+      <Label fx:id="msg_label" layoutX="14.0" layoutY="630.0">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Button fx:id="add_tag_btn" layoutX="325.0" layoutY="223.0" mnemonicParsing="false" onAction="#addTag" prefHeight="30.0" prefWidth="60.0" styleClass="primary-button" text="Add">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
+      <Label fx:id="tags_label" layoutX="410.0" layoutY="228.0" textFill="#1e2761">
+         <font>
+            <Font name="System Bold" size="14.0" />
          </font>
       </Label>
    </children>
