--- a/src/views/dashboard.fxml
+++ b/src/views/dashboard.fxml
@@ -6,7 +6,7 @@
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Dashboard">
    <children>
-      <TableView fx:id="table" prefHeight="660.0" prefWidth="1040.0">
+      <TableView fx:id="table" onMouseClicked="#mouse_click_event_handler" prefHeight="660.0" prefWidth="1040.0">
         <columns>
           <TableColumn fx:id="title_col" prefWidth="231.999966442585" text="Title" />
           <TableColumn fx:id="mod_dt_col" prefWidth="170.0" text="Modification Date" />
