--- a/src/views/dashboard.fxml
+++ b/src/views/dashboard.fxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.Pane?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="1040.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.Dashboard">
    <children>
-      <TableView fx:id="table" onMouseClicked="#mouse_click_event_handler" prefHeight="660.0" prefWidth="1040.0">
+      <TableView fx:id="table" layoutY="60.0" onMouseClicked="#mouse_click_event_handler" prefHeight="600.0" prefWidth="1040.0">
         <columns>
           <TableColumn fx:id="title_col" prefWidth="231.999966442585" text="Title" />
           <TableColumn fx:id="mod_dt_col" prefWidth="170.0" text="Modification Date" />
@@ -14,5 +15,6 @@
             <TableColumn fx:id="type_col" prefWidth="139.0" text="Type" />
         </columns>
       </TableView>
+      <ChoiceBox fx:id="category_choice_box" layoutX="445.0" layoutY="20.0" prefWidth="150.0" />
    </children>
 </Pane>
