--- a/src/views/menu.fxml
+++ b/src/views/menu.fxml
@@ -53,7 +53,7 @@
                         <Font name="System Bold Italic" size="20.0" />
                      </font>
                   </Button>
-                  <Button fx:id="userlist_btn" mnemonicParsing="false" prefHeight="50.0" prefWidth="240.0" styleClass="menu-button" text="User List">
+                  <Button fx:id="userlist_btn" mnemonicParsing="false" onAction="#gotoUserList" prefHeight="50.0" prefWidth="240.0" styleClass="menu-button" text="User List">
                      <font>
                         <Font name="System Bold Italic" size="20.0" />
                      </font>
